--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.momoproject.kakakuhikaku">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:label="比較・検索画面">
@@ -21,9 +23,10 @@
         </activity>
         <activity
             android:name=".oneViewModeActivity"
-            android:label="１画面表示">
-
-        </activity>
+            android:label="１画面表示"></activity>
+        <activity
+            android:name=".SettingActivity"
+            android:label="設定"></activity>
     </application>
 
 </manifest>
